--- a/bewerbung.css
+++ b/bewerbung.css
@@ -48,6 +48,10 @@ nav ul li a {
     border-radius: 5px;
 }
 
+nav ul li a:visited {
+    color: white; /* Stellt sicher, dass auch besuchte Links weiß bleiben */
+}
+
 nav ul li a:hover {
     background-color: #555; /* Optional: leichte Farbänderung bei Hover */
 }
