--- a/bewerbung.css
+++ b/bewerbung.css
@@ -49,7 +49,7 @@ nav ul li a {
 }
 
 nav ul li a:visited {
-    color: white; /* Stellt sicher, dass auch besuchte Links weiß bleiben */
+    color: white; /* Stellt sicher, dass besuchte Links weiß bleiben */
 }
 
 nav ul li a:hover {
